(cram
 (deps
  ../bin/main.exe
  debug_mode.exe
  (glob_files *.s--)))

(test
 (name eval_api)
 (libraries smm_))

(test
 (name cache_test)
 (libraries smm_))

(test
 (name mem_test)
 (libraries smm_))

(test
 (name change_memo_test)
 (libraries smm_))

(executable
 (name debug_mode)
 (libraries smm_))
